# Telegram-Travels

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
bot/: __main__.py  config.py  logging_setup.py  runner.py
bot/db/: models.py  session.py
bot/handlers/: __init__.py  compras.py  congress.py  echo.py  followup.py  manage.py  ping.py  roteiro.py  search.py  start.py  traffic.py  watch.py
bot/middlewares/: auth.py  db.py
bot/services/: alerts.py  chat.py  claude_client.py  congress.py  long_form.py  long_form_chat.py  parser.py  scheduler.py  serpapi_client.py  traffic.py  weather.py
bot/services/llm/: __init__.py  anthropic_impl.py  base.py  factory.py  gemini_impl.py  openai_impl.py
scripts/: backup.sh
