[project]
name = "telegram-travels"
version = "0.2.0"
description = "Telegram bot para alertas de viagens (passagens + hotéis)"
requires-python = ">=3.12"
dependencies = [
    "aiogram~=3.13",
    "sqlalchemy[asyncio]~=2.0.36",
    "aiosqlite~=0.20",
    "pydantic-settings~=2.6",
    "python-json-logger~=2.0",
    "anthropic~=0.40",
    "httpx~=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff~=0.7",
    "mypy~=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
